--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "version": 2,
+  "version": 3,
   "builds": [
     {
       "src": "src/main.ts",
@@ -10,7 +10,7 @@
     {
       "src": "/(.*)",
       "dest": "src/main.ts",
-      "methods": ["POST", "GET", "PUT", "DELETE"]
+      "methods": ["POST", "GET", "PUT", "PATCH", "DELETE"]
     }
   ]
 }
