--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
   "builds": [
     {
       "src": "src/main.ts",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "scripts": {
+        "build": "prisma generate && nest build"
+      }
     }
   ],
   "routes": [
