--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,7 @@
   "builds": [
     {
       "src": "src/main.ts",
-      "use": "@vercel/node",
-      "prebuild": "prisma generate"
+      "use": "@vercel/node"
     }
   ],
   "routes": [
